--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-
 }
 
 .text-danger{
@@ -9,8 +8,17 @@
 }
 
 .paper{
-  height: 100vh;
-  display: grid;
-  place-items: center;
+  margin-top: 250px;
+  margin-bottom: 250px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 30px;
+  background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
+  box-shadow: 0 6px 10px rgba(0,0,0,.3);
+  border-radius: 15px;
+  width: 50%;
+  text-align: center;
+  justify-content: center; 
+  align-items: center; 
 }
 
