--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,60 @@
   background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
   box-shadow: 0 6px 10px rgba(0,0,0,.3);
   border-radius: 15px;
-  width: 50%;
+  width: 90%;
+  height: 90%;
   text-align: center;
   justify-content: center; 
   align-items: center; 
+}
+
+.birthday-picker-container {
+  font-family: Arial, sans-serif;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.birthday-picker-title {
+  font-size: 16px;
+  margin-bottom: 5px;
+  font-weight: lighter;
+  color: dimgrey;
+  float: left;
+}
+
+.birthday-picker-wrapper {
+  position: relative;
+}
+
+/* Styling for the date picker input */
+.react-datepicker-wrapper {
+  width: 200px;
+}
+
+.react-datepicker__input-container input {
+  width: 80%;
+  height: 30px;
+  font-size: 16px;
+  padding: 3px 40px 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Styling for the calendar icon */
+.birthday-picker-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  color: #666;
+  pointer-events: none;
+}
+
+.error-message {
+  color: #ff0000;
+  font-size: 14px;
+  margin-top: 5px;
 }
 
